<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardsVSPeople</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="game_start_text">New Game!</string>
    <string name="welcome_message"> Welcome User!</string>
    <string name="help_button_message">Help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="player_location">PlayerLocation</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="help_message">The game is simple. Each round, one player asks a question from a Black Card, and everyone else answers with their funniest White Card. First to win six rounds wins the game!</string>
    <string name="gameactivity">This layout will show the game view</string>
    <string name="ongoing_game">Ongoing Games</string>
    <string name="testtext">Sample Text</string>
    <string name="submittext">Submit </string>
    <string name="active_players">Active Player List</string>
    <string name="request_players">Request selected players to play a game</string>
     <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Log In</string>
   <string name="Register">Register</string>
   <string name="attempts">Attempts Left:</string>
    <string name="Signup">Sign up</string>
 <string name="Cheat">Cheat</string>
 <string name="Refresh">Refresh</string>
</resources>
