<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >
    
    <TextView 
        android:id="@+id/bannertext"
        android:text="@string/welcome_message" 
        />

    <Button 
        android:id="@+id/game_start_button"
        android:layout_below="@+id/bannertext"
     	android:text= "@string/game_start_text"
     	android:onClick="startGame"
          />
    <Button 
        android:id= "@+id/help_button"
       	android:layout_below="@+id/game_start_button"
        android:text="@string/help_button_message"
        android:onClick="displayHelpMessage"
     
        />

</RelativeLayout>
