<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:id ="@+id/content_frame"
    android:orientation = "vertical"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent">

    <RelativeLayout 
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content">
        
        <TextView
        android:id="@+id/activePlayerList"
	    android:layout_width= "wrap_content"
	    android:layout_height="wrap_content"
		android:padding="10dp"
		android:text= "@string/active_players"
		android:textSize= "20sp">
    </TextView>

    <Button
        android:id="@+id/locationRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="19dp"
        android:padding="12dp"
        android:text="@string/Refresh"
        android:textSize="20sp" />
        
    </RelativeLayout>
    
    <Button 
	    android:id="@+id/requestSelected"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/request_players" 
	    />
    
	<fragment 
    	  android:id= "@+id/map"
    	  android:layout_width="match_parent"
    	  android:layout_height="200dip"
    	  android:name="com.google.android.gms.maps.MapFragment"/>
	
	<ListView 
	    android:id="@+id/listView1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    />
	
</LinearLayout>
